tools/tests/errors/surf_lib_21.ki
# dump.loads of bytes that are not a valid blob must throw.
var d = import("dump")
discard d.loads(Bytes([255, 254, 253, 252, 1, 2, 3]))
